styles/styles.scss
// Fonts
@font-face {
  font-family: 'TelefonNormal';
  src: url('./fonts/Telefon-Normal.otf');
}

@font-face {
  font-family: 'TelefonBoldItalic';
  src: url('./fonts/Telefon-BoldItalic.otf');
}
$header-font: 'TelefonBoldItalic';
$body-font: 'TelefonNormal';

// Colors
$blue: #3255a4;
$lightblue: #9fbae5;
$red: #f15060;
$black: #444;
$white: #fafafa;
$gray: #f6f6f4;


// Transition times
$fast: 0.2s;
$slow: 1s;
$slower: 1.5s;

body {
  margin: 0;
  padding: 0;
  font-family: $body-font, Verdana, sans-serif;
  color: $black;
  background-color: $gray;
  line-height: 1.5;
  opacity: 0;
  transition: opacity $slower ease-in-out;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $header-font, Verdana, sans-serif;
}

a {
  display: inline-block;
  border-bottom: 3px double $blue;
  text-decoration: none;

  transition: transform $fast ease-in-out;
  &:hover { transform: rotateZ(2deg); }

  &:visited,
  &:active {
    color: $blue;
    text-decoration: none;
  }
}

.mapboxgl-ctrl a {
  border: none;
  transform: none;
}

img {
  max-width: 100%;
}

#map {
  position: fixed;
  right: 0;
  height: 100vh;
  width: 100vw;
  @media (min-width: 768px) {
    float: right;
    width: 70vw;
  }
}

#event-sections {
  position: relative;
  display: none;

  @media (min-width: 768px) {
    display: block;
    width: 30vw;
  }

  .footer {
    height: 100vh;
    padding: 2rem;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: flex-end;
    flex-wrap: wrap;
  }
}

#play-button {
  position: fixed;
  top: 0.5em;
  left: 0.5em;
  z-index: 2;

  font-size: 1.5em;
  line-height: 0;

  color: $white;
  opacity: 0.7;
  cursor: pointer;

  transition: opacity $fast ease-in-out;
  &:hover {
    opacity: 0.9;
  }
}

.event-marker {
  background-size: cover;

  width: 60px;
  height: 60px;
  border-radius: 50%;

  cursor: pointer;

  z-index: 1;
  // filter: grayscale(1);
  opacity: 0.8;
  transition:
    opacity $fast ease-in-out,
    z-index $fast ease-in-out;

  &.active, &:hover {
    z-index: 2;
    opacity: 1;
    // filter: grayscale(0);
  }
}

.event-section {
  background-size: cover;
  font-size: 1rem;
  color: $white;
  opacity: 0.2;
  transition: opacity $fast ease-in-out;
  display: flex;
  flex-grow: 2;
  height: 100%;

  &.active {
    opacity: 1;
  }

  .event-info {
    width: 100%;
    background-color: rgba(0, 0, 0, 0.15);

    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;
    padding: 1rem;
    text-align: center;
    @media (min-width: 768px) {
      justify-content: flex-end;
      align-items: flex-end;
      height: 330px;
      text-align: right;
    }

    .start-time, .title {
      font-family: $header-font, Verdana, sans-serif;
      line-height: 1.5;
    }

    .start-time {
      font-size: 3.2em;
    }

    .title {
      font-size: 1.6em;
    }

    .event-link {
      border-color: $white;
      color: $white;
    }
  }
}

.location-marker {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  background-color: rgba(50, 85, 164, 0.75);
  opacity: 0.9;
}
.location-marker-accuracy {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: rgba(50, 85, 164, 0.75);
  opacity: 0.2;
}

/* Mapbox overrides */
.mapboxgl-map {
  font-family: inherit;
  font-size: inherit;
}

.mapboxgl-popup {
  transform: translate(0) !important;
  position: absolute;
  top: auto;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 34vh;
  z-index: 3;

  @media (min-width: 768px) { display: none; }

 .mapboxgl-popup-tip { display: none; }
 .mapboxgl-popup-content {
    width: 100%;
    height: 100%;
    border-radius: 0;
    padding: 0;

    .mapboxgl-popup-close-button {
      color: $white;
    }
  }
}

